fix(cells): align indicators and totals to right [TECH-1402]

--- a/src/data-workspace/table-body.module.css
+++ b/src/data-workspace/table-body.module.css
@@ -51,6 +51,7 @@
 .indicatorCell {
     composes: tableCell;
     background: var(--colors-grey300);
+    text-align: right;
 }
 
 .totalHeader {
